feat: add some general use components, setup circular dependencies and duplicated code check, added header component

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -1,3 +1,8 @@
 {
-  "GLOBAL_WALLET": "Wallet"
+  "GLOBAL_WALLET": "Connect wallet",
+  "GLOBAL_EXPLORE": "Explore",
+  "GLOBAL_FESTIVAL": "Festival",
+  "GLOBAL_WORK": "How it works",
+  "GLOBAL_SELL": "Sell your creations",
+  "GLOBAL_SEARCH": "Search on watchit"
 }
