feat: added movie profile

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -4,5 +4,36 @@
   "GLOBAL_FESTIVAL": "Festival",
   "GLOBAL_WORK": "How it works",
   "GLOBAL_SELL": "Sell your creations",
-  "GLOBAL_SEARCH": "Search on watchit"
+  "GLOBAL_SEARCH": "Search on watchit",
+
+  "MOVIE_PROFILE_OWNER": "Owner",
+  "MOVIE_PROFILE_CREATOR": "Creator",
+  "MOVIE_PROFILE_OFFERS": "Offers",
+  "MOVIE_PROFILE_ACTIVITY_DATE": "Date",
+  "MOVIE_PROFILE_ACTIVITY_EDITION": "Edition",
+  "MOVIE_PROFILE_ACTIVITY_DETAILS": "Details",
+  "MOVIE_PROFILE_HEADER_FINGERPRINT": "This is a signed and limited digital creation",
+  "MOVIE_PROFILE_HEADER_SHARE": "Share",
+  "MOVIE_PROFILE_OFFERS_TABLE_FROM": "From",
+  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Price",
+  "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "USD Price",
+  "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Date",
+  "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiration",
+  "MOVIE_PROFILE_PRICE_HIGHER": "Highest Offer",
+  "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Make Offer",
+  "MOVIE_PROFILE_VIEW_WATCHIT": "View on watchit",
+  "MOVIE_PROFILE_VIEW_ETHERSCAN": "View on Etherscan",
+  "MOVIE_PROFILE_VIEW_IPFS": "View on IPFS",
+  "MOVIE_PROFILE_MARKET_ACTIVITY": "Market Activity",
+  "MOVIE_PROFILE_ADDITIONAL_DETAILS": "Additional Details",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_1": "This is a signed and limited edition digital creation.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_1_LINK": "What does this mean?",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_2": "You’re purchasing the full commercial rights to this creation.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_2_LINK": "Learn more.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_3": "Upon purchase, this creation will be transferred to your digital wallet.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_3_LINK": "If you don’t have one, we’ll provide one for you.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_4": "You may download the full-sized creation to display or even for personal use.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_5": "All sales are final.",
+  "MOVIE_PROFILE_MINTED": "Minted movies: "
+
 }
