--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -4,5 +4,36 @@
   "GLOBAL_FESTIVAL": "Festival",
   "GLOBAL_WORK": "Como funciona",
   "GLOBAL_SELL": "Vende tus creaciones",
-  "GLOBAL_SEARCH": "Buscar en watchit"
+  "GLOBAL_SEARCH": "Buscar en watchit",
+
+  "MOVIE_PROFILE_OWNER": "Dueño",
+  "MOVIE_PROFILE_CREATOR": "Creador",
+  "MOVIE_PROFILE_OFFERS": "Ofertas",
+  "MOVIE_PROFILE_ACTIVITY_DATE": "Fecha",
+  "MOVIE_PROFILE_ACTIVITY_EDITION": "Edición",
+  "MOVIE_PROFILE_ACTIVITY_DETAILS": "Detalles",
+  "MOVIE_PROFILE_HEADER_FINGERPRINT": "Esta es una creación digital firmada y limitada.",
+  "MOVIE_PROFILE_HEADER_SHARE": "Compartir",
+  "MOVIE_PROFILE_OFFERS_TABLE_FROM": "De",
+  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Precio",
+  "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "Precio en USD",
+  "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Fecha",
+  "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiración",
+  "MOVIE_PROFILE_PRICE_HIGHER": "Oferta mas alta",
+  "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Hacer Oferta",
+  "MOVIE_PROFILE_VIEW_WATCHIT": "Ver en watchit",
+  "MOVIE_PROFILE_VIEW_ETHERSCAN": "Ver en Etherscan",
+  "MOVIE_PROFILE_VIEW_IPFS": "Ver en IPFS",
+  "MOVIE_PROFILE_MARKET_ACTIVITY": "Actividad del mercado",
+  "MOVIE_PROFILE_ADDITIONAL_DETAILS": "Detalles adicionales",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_1": "Se trata de una creación digital firmada y de edición limitada.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_1_LINK": "Qué significa esto?",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_2": "Estás comprando todos los derechos comerciales de esta creación.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_2_LINK": "Aprende más.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_3": "Tras la compra, esta creación se transferirá a su billetera digital.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_3_LINK": "Si no tiene una, le proporcionaremos una.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_4": "Puede descargar la creación a tamaño completo para mostrarla o incluso para uso personal.",
+  "MOVIE_PROFILE_ADDITIONAL_DETAIL_5": "Todas las ventas son finales.",
+  "MOVIE_PROFILE_MINTED": "Peliculas: "
+
 }
