feat: add movie create form

--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -34,6 +34,36 @@
   "MOVIE_PROFILE_ADDITIONAL_DETAIL_3_LINK": "Si no tiene una, le proporcionaremos una.",
   "MOVIE_PROFILE_ADDITIONAL_DETAIL_4": "Puede descargar la creación a tamaño completo para mostrarla o incluso para uso personal.",
   "MOVIE_PROFILE_ADDITIONAL_DETAIL_5": "Todas las ventas son finales.",
-  "MOVIE_PROFILE_MINTED": "Peliculas: "
+  "MOVIE_PROFILE_MINTED": "Peliculas: ",
+
+  "MOVIE_CREATE_MINT": "Acuñar pelicula",
+  "MOVIE_CREATE_PREVIEW": "Vista previa",
+  "MOVIE_CREATE_PREVIEW_HELP": "Sube el archivo para obtener una vista previa de tu nuevo NFT",
+  "MOVIE_CREATE_PROPERTIES": "Propiedades (opcional)",
+  "MOVIE_CREATE_KEY": "Llave",
+  "MOVIE_CREATE_KEY_HELP": "ej. `Dimensiones`",
+  "MOVIE_CREATE_VALUE": "Valor",
+  "MOVIE_CREATE_VALUE_HELP": "ej. ‘3840 x 2160 px (4K)’",
+  "MOVIE_CREATE_FILE_BUTTON": "Seleccione el archivo",
+  "MOVIE_CREATE_FILM_TITLE": "Subir película",
+  "MOVIE_CREATE_FILM_HELP_TEXT": "WEBP o MP4",
+  "MOVIE_CREATE_POSTER_TITLE": "Subir póster de película",
+  "MOVIE_CREATE_POSTER_HELP_TEXT": "PNG, GIF o JEPG. Max 100mb.",
+  "MOVIE_CREATE_NAME": "Nombre",
+  "MOVIE_CREATE_NAME_HELP_TEXT": "ej. “Transferencia: una historia de amor bipolar”",
+  "MOVIE_CREATE_DESCRIPTION": "Descripción",
+  "MOVIE_CREATE_DESCRIPTION_HELP_TEXT": "ej. “Una enfermera se embarca en un apasionado romance con …”",
+  "MOVIE_CREATE_BID": "Oferta mínima",
+  "MOVIE_CREATE_BID_HELP_TEXT": "No se permitirán pujas por debajo de esta cantidad.",
+  "MOVIE_CREATE_TRAILER": "URL del tráiler (opcional)",
+  "MOVIE_CREATE_NFT_DESC": "Descripción alternativa de NFT (opcional)",
+  "MOVIE_CREATE_NFT_DESC_HELP_TEXT": "Descripción detallada de la película",
+  "MOVIE_CREATE_UNLOCK": "Desbloquear una vez comprado",
+  "MOVIE_CREATE_UNLOCK_HELP_TEXT": "El contenido se desbloqueará después de una transacción exitosa",
+  "MOVIE_CREATE_UNLOCK_KEY": "Llave digital",
+  "MOVIE_CREATE_UNLOCK_KEY_HELP_TEXT": "Clave digital, código para canjear o vincular a un archivo",
+  "MOVIE_CREATE_FREE_MINTING": "Acuñación gratis",
+  "MOVIE_CREATE_FREE_MINTING_HELP_TEXT": "El comprador pagará las tarifas de gas por acuñar",
+  "MOVIE_CREATE_ADD_BUTTON": "Añadir película"
 
 }
