feat: add link to create form chore: add translation for create link

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -1,6 +1,7 @@
 {
   "GLOBAL_WALLET": "Connect wallet",
   "GLOBAL_EXPLORE": "Explore",
+  "GLOBAL_CREATE": "Create",
   "GLOBAL_FESTIVAL": "Festival",
   "GLOBAL_WORK": "How it works",
   "GLOBAL_SELL": "Sell your creations",
