--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -1,6 +1,7 @@
 {
   "GLOBAL_WALLET": "Conectar cartera",
   "GLOBAL_EXPLORE": "Explorar",
+  "GLOBAL_CREATE": "Crear",
   "GLOBAL_FESTIVAL": "Festival",
   "GLOBAL_WORK": "Como funciona",
   "GLOBAL_SELL": "Vende tus creaciones",
