--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -65,6 +65,10 @@
   "MOVIE_CREATE_UNLOCK_KEY_HELP_TEXT": "Digital key, code to redeem or link to a file",
   "MOVIE_CREATE_FREE_MINTING": "Free minting",
   "MOVIE_CREATE_FREE_MINTING_HELP_TEXT": "Buyer will pay gas fees for minting",
-  "MOVIE_CREATE_ADD_BUTTON": "Mint Movie"
-
+  "MOVIE_CREATE_ADD_BUTTON": "Mint Movie",
+  "MOVIE_CREATE_ADD_BUTTON_TOOLTIP": "Please connect your wallet",
+  "MOVIE_CREATE_SUCCESS_UPLOADED": "Successfully uploaded movie!",
+  "MOVIE_CREATE_SUCCESS_UPLOADED_MESSAGE": "We will send you a notification when the ingest/transcoding process is complete",
+  "MOVIE_CREATE_SUCCESS_UPLOADING": "Uploading your movie",
+  "MOVIE_CREATE_SUCCESS_UPLOADING_MESSAGE": "This may take some time, depending on your file size and internet speed"
 }
