feat: bid movie

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -16,7 +16,7 @@
   "MOVIE_PROFILE_HEADER_FINGERPRINT": "This is a signed and limited digital creation",
   "MOVIE_PROFILE_HEADER_SHARE": "Share",
   "MOVIE_PROFILE_OFFERS_TABLE_FROM": "From",
-  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Price",
+  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Offer",
   "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "USD Price",
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Date",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiration",
