--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -16,7 +16,7 @@
   "MOVIE_PROFILE_HEADER_FINGERPRINT": "Esta es una creación digital firmada y limitada.",
   "MOVIE_PROFILE_HEADER_SHARE": "Compartir",
   "MOVIE_PROFILE_OFFERS_TABLE_FROM": "De",
-  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Precio",
+  "MOVIE_PROFILE_OFFERS_TABLE_PRICE": "Oferta",
   "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "Precio en USD",
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Fecha",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiración",
