refactor: useEtherBalance chore: remove old abi

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -7,7 +7,7 @@
   "GLOBAL_SELL": "Sell your creations",
   "GLOBAL_SEARCH": "Search on watchit",
 
-  "MOVIE_PROFILE_OWNER": "Owner",
+  "MOVIE_PROFILE_OWNER": "Holder",
   "MOVIE_PROFILE_CREATOR": "Creator",
   "MOVIE_PROFILE_OFFERS": "Offers",
   "MOVIE_PROFILE_ACTIVITY_DATE": "Date",
