--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -7,7 +7,7 @@
   "GLOBAL_SELL": "Vende tus creaciones",
   "GLOBAL_SEARCH": "Buscar en watchit",
 
-  "MOVIE_PROFILE_OWNER": "Dueño",
+  "MOVIE_PROFILE_OWNER": "Custodio",
   "MOVIE_PROFILE_CREATOR": "Creador",
   "MOVIE_PROFILE_OFFERS": "Ofertas",
   "MOVIE_PROFILE_ACTIVITY_DATE": "Fecha",
