feat: add accept offer button and pay button to movie profile

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -20,8 +20,17 @@
   "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "USD Price",
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Date",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiration",
+  "MOVIE_PROFILE_OFFERS_TABLE_ACTION": "Action",
   "MOVIE_PROFILE_PRICE_HIGHER": "Highest Offer",
   "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Make Offer",
+  "MOVIE_PROFILE_PRICE_ACCEPT_OFFER": "Accept Offer",
+  "MOVIE_PROFILE_PRICE_ACCEPT": "Accept",
+  "MOVIE_PROFILE_PRICE_BUY": "Confirm payment",
+  "MOVIE_PROFILE_PRICE_PAY": "Pay",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION": "Confirmation",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_ACCEPT": "You are about to accept an offer of",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_PAY": "You are about to pay",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_FOR": "for",
   "MOVIE_PROFILE_VIEW_WATCHIT": "View on watchit",
   "MOVIE_PROFILE_VIEW_ETHERSCAN": "View on Etherscan",
   "MOVIE_PROFILE_VIEW_IPFS": "View on IPFS",
