--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -20,8 +20,17 @@
   "MOVIE_PROFILE_OFFERS_TABLE_USD_PRICE": "Precio en USD",
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Fecha",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiración",
+  "MOVIE_PROFILE_OFFERS_TABLE_ACTION": "Acción",
   "MOVIE_PROFILE_PRICE_HIGHER": "Oferta mas alta",
   "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Hacer Oferta",
+  "MOVIE_PROFILE_PRICE_ACCEPT_OFFER": "Aceptar Oferta",
+  "MOVIE_PROFILE_PRICE_ACCEPT": "Aceptar",
+  "MOVIE_PROFILE_PRICE_BUY": "Confirmar pago",
+  "MOVIE_PROFILE_PRICE_PAY": "Pagar",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION": "Confirmación",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_ACCEPT": "Estás a punto de aceptar una oferta de",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_PAY": "Estás a punto de pagar",
+  "MOVIE_PROFILE_PRICE_CONFIRMATION_FOR": "por",
   "MOVIE_PROFILE_VIEW_WATCHIT": "Ver en watchit",
   "MOVIE_PROFILE_VIEW_ETHERSCAN": "Ver en Etherscan",
   "MOVIE_PROFILE_VIEW_IPFS": "Ver en IPFS",
