feat: add movie profile tables placeholders

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -13,6 +13,7 @@
   "MOVIE_PROFILE_ACTIVITY_DATE": "Date",
   "MOVIE_PROFILE_ACTIVITY_EDITION": "Edition",
   "MOVIE_PROFILE_ACTIVITY_DETAILS": "Details",
+  "MOVIE_PROFILE_ACTIVITY_EMPTY": "This NFT has no activity yet",
   "MOVIE_PROFILE_HEADER_FINGERPRINT": "This is a signed and limited digital creation",
   "MOVIE_PROFILE_HEADER_SHARE": "Share",
   "MOVIE_PROFILE_OFFERS_TABLE_FROM": "From",
@@ -21,6 +22,8 @@
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Date",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiration",
   "MOVIE_PROFILE_OFFERS_TABLE_ACTION": "Action",
+  "MOVIE_PROFILE_OFFERS_TABLE_EMPTY": "No active bids yet. Be the first to make a bid!",
+  "MOVIE_PROFILE_OFFERS_TABLE_EMPTY_OWNER": "You will receive notifications about new bids as they will appear",
   "MOVIE_PROFILE_PRICE_HIGHER": "Highest Offer",
   "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Make Offer",
   "MOVIE_PROFILE_PRICE_ACCEPT_OFFER": "Accept Offer",
