--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -13,6 +13,7 @@
   "MOVIE_PROFILE_ACTIVITY_DATE": "Fecha",
   "MOVIE_PROFILE_ACTIVITY_EDITION": "Edición",
   "MOVIE_PROFILE_ACTIVITY_DETAILS": "Detalles",
+  "MOVIE_PROFILE_ACTIVITY_EMPTY": "Este NFT no tiene ninguna actividad aún",
   "MOVIE_PROFILE_HEADER_FINGERPRINT": "Esta es una creación digital firmada y limitada.",
   "MOVIE_PROFILE_HEADER_SHARE": "Compartir",
   "MOVIE_PROFILE_OFFERS_TABLE_FROM": "De",
@@ -21,6 +22,8 @@
   "MOVIE_PROFILE_OFFERS_TABLE_DATE": "Fecha",
   "MOVIE_PROFILE_OFFERS_TABLE_EXPIRATION": "Expiración",
   "MOVIE_PROFILE_OFFERS_TABLE_ACTION": "Acción",
+  "MOVIE_PROFILE_OFFERS_TABLE_EMPTY": "No hay ofertas activas todavía. ¡Sé el primero en hacer una oferta!",
+  "MOVIE_PROFILE_OFFERS_TABLE_EMPTY_OWNER": "Recibirá notificaciones sobre nuevas ofertas a medida que vayan apareciendo.",
   "MOVIE_PROFILE_PRICE_HIGHER": "Oferta mas alta",
   "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Hacer Oferta",
   "MOVIE_PROFILE_PRICE_ACCEPT_OFFER": "Aceptar Oferta",
