--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -24,6 +24,7 @@
   "MOVIE_PROFILE_OFFERS_TABLE_ACTION": "Acción",
   "MOVIE_PROFILE_OFFERS_TABLE_EMPTY": "No hay ofertas activas todavía. ¡Sé el primero en hacer una oferta!",
   "MOVIE_PROFILE_OFFERS_TABLE_EMPTY_OWNER": "Recibirá notificaciones sobre nuevas ofertas a medida que vayan apareciendo.",
+  "MOVIE_PROFILE_OFFERS_SUCCESS": "Su oferta fue creada satisfactoriamente",
   "MOVIE_PROFILE_PRICE_HIGHER": "Oferta mas alta",
   "MOVIE_PROFILE_PRICE_MAKE_OFFER": "Hacer Oferta",
   "MOVIE_PROFILE_PRICE_ACCEPT_OFFER": "Aceptar Oferta",
