feat: added Profile, ProfileEdit, Wallet components

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -6,6 +6,9 @@
   "GLOBAL_WORK": "How it works",
   "GLOBAL_SELL": "Sell your creations",
   "GLOBAL_SEARCH": "Search on watchit",
+  "GLOBAL_MORNING": "Hey! ",
+  "GLOBAL_ACCOUNT_SETTINGS": "Settings",
+  "GLOBAL_LOGOUT": "Log out",
 
   "MOVIE_PROFILE_OWNER": "Holder",
   "MOVIE_PROFILE_CREATOR": "Creator",
@@ -86,5 +89,29 @@
   "MOVIE_ACCEPT_OFFER_SUCCESS": "Offer Accepted",
   "MOVIE_ACCEPT_OFFER_ERROR": "Error trying to Accept offer",
   "MOVIE_PAY_OFFER_SUCCESS": "NFT Purchased",
-  "MOVIE_PAY_OFFER_ERROR": "Error trying to pay offer"
+  "MOVIE_PAY_OFFER_ERROR": "Error trying to pay offer",
+
+  "PROFILE_EDIT_TITLE": "Edit profile",
+  "PROFILE_EDIT_COVER": "Upload cover image",
+  "PROFILE_EDIT_IMAGE": "Upload profile image",
+  "PROFILE_EDIT_USERNAME": "Username",
+  "PROFILE_EDIT_USERNAME_HELP": "Name to show",
+  "PROFILE_EDIT_BIOGRAPHY": "Biography",
+  "PROFILE_EDIT_BIOGRAPHY_HELP": "Tell us about you in a few words",
+  "PROFILE_EDIT_EMAIL": "Email",
+  "PROFILE_EDIT_EMAIL_HELP": "Your email for market notifications",
+  "PROFILE_EDIT_SOCIAL_MEDIA_TITLE": "Social Media",
+  "PROFILE_EDIT_SOCIAL_MEDIA_SUBTITLE": "Link your social media accounts  to gain more confidence.",
+  "PROFILE_EDIT_SOCIAL_YOUTUBE": "Youtube url",
+  "PROFILE_EDIT_SOCIAL_YOUTUBE_HELP": "Link to your YouTube channel",
+  "PROFILE_EDIT_SOCIAL_TWITTER": "Twitter url",
+  "PROFILE_EDIT_SOCIAL_TWITTER_HELP": "Link to your twitter account",
+  "PROFILE_EDIT_SOCIAL_INSTAGRAM": "Instagram url",
+  "PROFILE_EDIT_SOCIAL_INSTAGRAM_HELP": "Link to your Instagram account",
+  "PROFILE_EDIT_SOCIAL_FACEBOOK": "Facebook url",
+  "PROFILE_EDIT_SOCIAL_FACEBOOK_HELP": "Link to your Facebook account",
+  "PROFILE_EDIT_SOCIAL_PERSONAL_SITE": "Personal site or portfolio url",
+  "PROFILE_EDIT_SOCIAL_PERSONAL_SITE_HELP": "Link to your Personal site",
+  "PROFILE_EDIT_BUTTON_ADD": "Add Item",
+  "PROFILE_EDIT_BUTTON_ADD_TOOLTIP": "Please connect your wallet"
 }
