--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -6,6 +6,9 @@
   "GLOBAL_WORK": "Como funciona",
   "GLOBAL_SELL": "Vende tus creaciones",
   "GLOBAL_SEARCH": "Buscar en watchit",
+  "GLOBAL_MORNING": "Hey! ",
+  "GLOBAL_ACCOUNT_SETTINGS": "Ajustes",
+  "GLOBAL_LOGOUT": "Cerrar Sesión",
 
   "MOVIE_PROFILE_OWNER": "Custodio",
   "MOVIE_PROFILE_CREATOR": "Creador",
@@ -86,5 +89,29 @@
   "MOVIE_ACCEPT_OFFER_SUCCESS": "Oferta aceptada",
   "MOVIE_ACCEPT_OFFER_ERROR": "Error aceptando oferta",
   "MOVIE_PAY_OFFER_SUCCESS": "NFT adquirido",
-  "MOVIE_PAY_OFFER_ERROR": "Error pagando oferta"
+  "MOVIE_PAY_OFFER_ERROR": "Error pagando oferta",
+
+  "PROFILE_EDIT_TITLE": "Editar perfil",
+  "PROFILE_EDIT_COVER": "Subir imagen de portada",
+  "PROFILE_EDIT_IMAGE": "Subir imagen de perfil",
+  "PROFILE_EDIT_USERNAME": "Nombre de usuario",
+  "PROFILE_EDIT_USERNAME_HELP": "Nombre para mostrar",
+  "PROFILE_EDIT_BIOGRAPHY": "Biografía",
+  "PROFILE_EDIT_BIOGRAPHY_HELP": "Háblanos de ti en pocas palabras",
+  "PROFILE_EDIT_EMAIL": "Correo electrónico",
+  "PROFILE_EDIT_EMAIL_HELP": "Su correo electrónico para notificaciones de mercado",
+  "PROFILE_EDIT_SOCIAL_MEDIA_TITLE": "Redes sociales",
+  "PROFILE_EDIT_SOCIAL_MEDIA_SUBTITLE": "Vincula tus cuentas de redes sociales para ganar más confianza.",
+  "PROFILE_EDIT_SOCIAL_YOUTUBE": "Youtube url",
+  "PROFILE_EDIT_SOCIAL_YOUTUBE_HELP": "Enlace a su canal de YouTube",
+  "PROFILE_EDIT_SOCIAL_TWITTER": "Twitter url",
+  "PROFILE_EDIT_SOCIAL_TWITTER_HELP": "Enlace a su cuenta de twitter",
+  "PROFILE_EDIT_SOCIAL_INSTAGRAM": "Instagram url",
+  "PROFILE_EDIT_SOCIAL_INSTAGRAM_HELP": "Enlace a su cuenta de Instagram",
+  "PROFILE_EDIT_SOCIAL_FACEBOOK": "Facebook url",
+  "PROFILE_EDIT_SOCIAL_FACEBOOK_HELP": "Enlace a su cuenta de Facebook",
+  "PROFILE_EDIT_SOCIAL_PERSONAL_SITE": "Sitio personal o URL de cartera",
+  "PROFILE_EDIT_SOCIAL_PERSONAL_SITE_HELP": "Enlace a su sitio personal",
+  "PROFILE_EDIT_BUTTON_ADD": "Añadir artículo",
+  "PROFILE_EDIT_BUTTON_ADD_TOOLTIP": "Conecta tu billetera"
 }
